fixed scrollbar consistency

--- a/src/app.scss
+++ b/src/app.scss
@@ -84,13 +84,24 @@
   }
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  overflow-y: hidden;
+  height: 100vh;
+}
+
+#main {
+  height: 100%;
+  overflow-y: overlay;
+}
+
 html {
   font-size: 62.5%;
 }
 
 body {
   width: 100%;
-  height: 100%;
   font-family: 'Open Sans', sans-serif;
   font-size: 12pt;
   background-color: #000;
